Remove .db file