@@ -1,10 +1,10 @@
 package com.shedule.x.service;
 
+import com.shedule.x.config.factory.GraphRequestFactory;
 import com.shedule.x.dto.MatchResult;
 import com.shedule.x.models.PerfectMatchEntity;
-import com.shedule.x.repo.PerfectMatchRepository;
-import com.shedule.x.utils.basic.DefaultValuesPopulator;
-import com.shedule.x.utils.db.BatchUtils;
+import com.shedule.x.models.PotentialMatchEntity;
+import com.shedule.x.processors.PerfectMatchStorageProcessor;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -12,39 +12,24 @@ import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
+import java.util.concurrent.CompletableFuture;
+import java.util.stream.Collectors;
 
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
 public class MatchStorageServiceImpl implements MatchStorageService {
-    private final PerfectMatchRepository perfectMatchRepository;
-    private static final int BATCH_SIZE = 1000;
+    private final PerfectMatchStorageProcessor perfectMatchStorageProcessor;
 
 
-    public void saveMatchResults(Map<String, List<MatchResult>> matches, String groupId, UUID domainId) {
-        List<PerfectMatchEntity> allResults = matches.entrySet().stream()
+    @Override
+    public CompletableFuture<Void> savePerfectMatchResults(Map<String, List<MatchResult>> results, String groupId, UUID domainId) {
+        List<PerfectMatchEntity> perfectMatches = results.entrySet().stream()
                 .flatMap(entry -> entry.getValue().stream()
-                        .map(match -> PerfectMatchEntity.builder()
-                                .compatibilityScore(match.getScore())
-                                .matchedAt(DefaultValuesPopulator.getCurrentTimestamp())
-                                .referenceId(entry.getKey())
-                                .matchedReferenceId(match.getPartnerId())
-                                .domainId(domainId)
-                                .groupId(groupId)
-                                .build()))
-                .toList();
+                        .map(result -> GraphRequestFactory.convertToPerfectMatch(result, entry.getKey(), groupId, domainId)))
+                .collect(Collectors.toList());
 
-        List<List<PerfectMatchEntity>> batches = BatchUtils.partition(allResults, BATCH_SIZE);
-        int processed = 0;
-
-        for (List<PerfectMatchEntity> batch : batches) {
-            perfectMatchRepository.saveAll(batch);
-            perfectMatchRepository.flush();
-            processed += batch.size();
-            log.debug("Saved batch of {} match results ({} of {})", batch.size(), processed, allResults.size());
-        }
-
-        log.info("Completed saving {} match results for group '{}'", allResults.size(), groupId);
+        return perfectMatchStorageProcessor.savePerfectMatches(perfectMatches, groupId, domainId);
     }
 }
